--- a/microservicecloud-config-eureka-client.yml
+++ b/microservicecloud-config-eureka-client.yml
@@ -3,6 +3,13 @@ spring:
     application: 
       name: microservicecloud-config-eureka-client
 
+server: 
+  port: 7001 #注册中心占用7001端口，冒号后面必须要有空格
+  
+spring:
+  profiles: dev
+  application:
+    name: microservicecloud-config-eureka-client
 eureka:
   instance:
     hostname: eureka7001.com #冒号后面必须要有空格
