--- a/microservicecloud-config-eureka-client.yml
+++ b/microservicecloud-config-eureka-client.yml
@@ -1,7 +1,8 @@
 spring:
-  profiles: dev
-    application: 
-      name: microservicecloud-config-eureka-client
+  profiles:
+  active:
+  - dev
+   
 
 server: 
   port: 7001 #注册中心占用7001端口，冒号后面必须要有空格
